@@ -9,8 +9,10 @@ Bugfixes:
 - ensure memory is never swapped out to disk
 - handle errors while loading icons
 - password generator now always avoids ambiguous characters
+- don't use passwords in default goto commands
 - removed the Help > Homepage menu item
 - added note to lock dialog when quit disabled due to unsaved changes
+- password checker and generator follow "show passwords" preference
 
 Code changes:
 - depend on pygtk 2.8 and gnome-python 2.10
